Fix some spacing.

--- a/src/containers/Hero/Hero.scss
+++ b/src/containers/Hero/Hero.scss
@@ -8,11 +8,19 @@
         padding-top: 51px;
         flex-direction: column;
         
-        // Small devices (phones, 568px and up)
-        @media screen and (max-width: 360px) and (orientation: portrait) {
+        @media screen and (min-width: 320px) and (orientation: portrait) {
             height: 150vh;
         }
+                
+        @media screen and (min-width: 375px) and (orientation: portrait) {
+            height: 130vh;
+        }
         
+        @media screen and (min-width: 568px) and (orientation: portrait) {
+            height: 100vh;
+        }
+        
+        // Small devices (phones, 568px and up)
         @media screen and (min-width: 568px) and (orientation: landscape) {
             height: 180vh;
         }
@@ -104,6 +112,12 @@
             font-weight: bold;
         }
         
+        // Small devices (phones, 568px and up)
+        @media screen and (min-width : 320px) {
+            font-size: 18px;
+            padding: 10px 30px;
+        }
+        
         @media screen and (min-width: 568px) and (orientation: landscape) {
             font-size: 18px;
             padding: 5px 50px;
@@ -119,11 +133,6 @@
         @media screen and (min-width: 1024px) and (orientation: landscape) {
             font-size: 20px;
             padding: 10px 40px;
-        }
-
-        @media screen and (max-width : 500px) {
-            font-size: 18px;
-            padding: 10px 30px;
         }
     }
     
